fix: Se borro codigo no utilizado